Updated index.html to match new app name

--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -6,10 +6,10 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Okinawan Association App" />
+  <meta name="description" content="Collab Note App" />
   <link rel="apple-touch-icon" href="logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Okinawan Association App</title>
+  <title>Collab Note App</title>
 </head>
 
 <body>
